@@ -1,3 +1,8 @@
+2014-04-17  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
+
+	* mime-view.el (mime-view-define-keymap): Use mapc instead of
+	mapcar for side effect.
+
 2014-03-15  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
 
 	* semi-setup.el: Set up for previewing
